Implement fetching and creating of categories
